languages/CNNArchLang/src/test/resources/valid_tests/SimpleNetworkTanh.cnna
/* (c) https://github.com/MontiCore/monticore */
architecture SimpleNetworkTanh(inputs=10, classes=2){
    def input Q(-oo:+oo)^{inputs} in1
    def output Q(-1:1)^{classes} out1

    in1 ->
    FullyConnected(units=64, no_bias=true) ->
    Tanh() ->
    FullyConnected(units=classes, no_bias=true) ->
    Tanh() ->
    out1;
}
