languages/CNNArchLang/src/test/resources/invalid_tests/InvalidIOShape1.cnna
/* (c) https://github.com/MontiCore/monticore */
architecture InvalidIOShape1(){
    def input Q(-oo:+oo)^{10, 2} in1
    def output Q(0:1)^{10, 2, 2, 2} out1

    in1 ->
    FullyConnected(units=64) ->
    Tanh() ->
    FullyConnected(units=10) ->
    Softmax() ->
    out1;
}
